--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuidv4": "^6.2.13"
   }
 }
